oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=keycloak
        - --login-url=https://keycloak.192.168.49.2.nip.io/auth/realms/app/protocol/openid-connect/auth
        - --redeem-url=https://keycloak.192.168.49.2.nip.io/auth/realms/app/protocol/openid-connect/token
        - --validate-url=https://keycloak.192.168.49.2.nip.io/auth/realms/app/protocol/openid-connect/userinfo
        - --extra-jwt-issuers=http://keycloak.192.168.49.2.nip.io/auth/realms/app=account
        - --email-domain=*
        - --pass-access-token=true
        - --pass-user-headers=true
        - --set-xauthrequest=true
        - --set-authorization-header=true
        - --pass-authorization-header=true
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --ssl-insecure-skip-verify=true
        - --skip-jwt-bearer-tokens=true
        - --scope=email
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
            limits:
              cpu: 500m
              memory: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
